api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standalone-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: standalone-api
  template:
    metadata:
      labels:
        app: standalone-api
    spec:
      containers:
      - name: python-api
        image: image-registry.openshift-image-registry.svc:5000/openshift/python:3.9-ubi8
        command: ["python3", "/mnt/app.py"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: script-vol
          mountPath: /mnt
      volumes:
      - name: script-vol
        configMap:
          name: api-script
---
apiVersion: v1
kind: Service
metadata:
  name: standalone-api
spec:
  selector:
    app: standalone-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: standalone-api
spec:
  to:
    kind: Service
    name: standalone-api
  port:
    targetPort: 8080
